--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,10 +1,10 @@
 +++
-title = "CHANGEME Training"
-linkTitle = "CHANGEME Training"
+title = "Dagger Techlab"
+linkTitle = "Dagger Techlab"
 
 +++
 
-{{< blocks/cover title="Welcome to the CHANGEME Training" image_anchor="top" height="full" color="primary" >}}
+{{< blocks/cover title="Welcome to the Dagger Techlab" image_anchor="top" height="full" color="primary" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/setup" >}}">
 		Setup <i class="fas fa-cogs ml-2 "></i>
